--- a/01-http/03-DeberPágina/deber-pagina/package.json
+++ b/01-http/03-DeberPágina/deber-pagina/package.json
@@ -28,7 +28,8 @@
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "typeface-poppins": "0.0.72"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
