--- a/01-http/Examen/examen/package.json
+++ b/01-http/Examen/examen/package.json
@@ -23,12 +23,20 @@
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/platform-socket.io": "^6.5.3",
+    "@nestjs/typeorm": "^6.1.3",
+    "@nestjs/websockets": "^6.5.3",
+    "class-validator": "^0.9.1",
     "cookie-parser": "^1.4.4",
     "ejs": "^2.6.1",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.3.3",
+    "session-file-store": "^1.3.1",
+    "typeorm": "^0.2.18"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
